Fix wallet app extra white space at bottom of page issue.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -436,6 +436,7 @@ div.out-form-group > div > div.alert.alert-dismissible{margin-right:15px;margin-
 body,html,#app,.app-landing,.body-main{min-height:100%;min-width:inherit;}
 body{font-family:'Lato',sans-serif;font-size:14px;}
 .app-wrap-profiles{width:100%;min-height:100%;background:#fafafa;background:-webkit-linear-gradient(top,#fafafa 0%,#f2f2f2 100%);}
+.app-wrap-wallet{width:100%;min-height:100%;}
 .site-wrapper{display:flex;flex-direction:column;min-height:100%;padding:35px;}
 .home-screen-wrap{width:100%;min-height:100%;background:#FAFAFA;}
 .home-screen{width:100%;min-height:100%;background:#FAFAFA;}
@@ -487,7 +488,7 @@ input[type=radio]{margin-right:1rem;}
 a.card:hover{text-decoration:none;}
 .profile-card-list{margin-bottom:0;}
 .profile-list-card-title{font-size:15px;color:#19191A;font-weight:400;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-.profile-list-card-subtitle{font-size:13px;color:#949494;}
+.profile-list-card-subtitle{font-size:13px;color:#949494;line-height:1.9rem;}
 .profile-list-card-avatar{display:inline-block;}
 .profile-list-avatar{float:left;margin-right:15px;padding:0;}
 div.card-avatar.profile-list-avatar img{max-width:48px;}
